test/multilocale/diten/localBlock/needMultiLocales/localBlock2.good
localBlock2.chpl:14: error: cannot access remote data in local block
